# Full-Stack-Web-Application

./: .dockerignore  .env.example  .gitignore  API_Specification.md  AUTHENTICATION_SECURITY_REQUIREMENTS.md  ERROR_HANDLING_RESPONSE_FORMATS.md  FINAL_INTEGRATION_STATUS.md  FULL_STACK_TEST.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_SUMMARY.md  README.md  docker-compose.yml  final_api_spec.json  integration_test.md
backend/: .env  CLAUDE.md  MIGRATION_GUIDE.md  __main__.py  alembic.ini  check_db_config.py  check_db_schema.py  comprehensive_auth_test.py  debug_server.bat  direct_test.py  pyproject.toml  requirements.txt  run.py  schemas.py  start_backend.bat  start_server.py  test_backend_comprehensive.py  test_backend_endpoints.py  test_db_connection.py  test_db_fix.py  test_full_functionality.py  test_integration.py  test_registration.py  test_server_connectivity.py  test_startup.py  test_task_features.py  update_db_schema.py  utils.py  verify_integration.py
backend/alembic/: env.py
backend/alembic/versions/: 591a59c37569_initial_migration_for_user_and_task_.py
backend/routes/: tasks.py
backend/src/: auth.py  exceptions.py  main.py  middleware.py  models.py  schemas.py  utils.py
backend/src/api/: __init__.py  auth_routes.py  dashboard_routes.py  public_task_routes.py  task_routes.py
backend/src/crud/: tasks.py
backend/src/database/: db.py
backend/src/models/: __init__.py  task.py  user.py
backend/src/services/: task_service.py
backend/tests/: __init__.py  test_tasks.py
frontend/: middleware.backup.before.ui.redesign.md  package-lock.json  proxy.ts  (+4 more)
(+337 files in other folders)
